--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Popular Hashtags Search</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel='shortcut icon' href='favicon.png' type='image/x-icon'/ >
 
 </head>
