--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </form>
     <div id="instagram"></div>
     <footer>
-        <script type='text/javascript' src='js/config.js'></script>
+       <!-- <script type='text/javascript' src='js/config.js'></script> -->
         <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/css" src="css/main.css"></script>
